test/perl/syntax_error/psgi.pl
my $app = sub {
    my ($environ) = @_

    return ['200', [], []];
};
